--- a/HiChongSwift/AboutMe.storyboard
+++ b/HiChongSwift/AboutMe.storyboard
@@ -400,6 +400,9 @@
                                         <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VKU-ZY-oem">
                                             <rect key="frame" x="514" y="6" width="51" height="31"/>
                                             <color key="onTintColor" red="0.9960784912109375" green="0.58039218187332153" blue="0.49803924560546875" alpha="1" colorSpace="deviceRGB"/>
+                                            <connections>
+                                                <action selector="switchStatusChanged:" destination="k6f-Bx-NcT" eventType="valueChanged" id="dyd-vM-ZiF"/>
+                                            </connections>
                                         </switch>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oON-Xp-l4P">
                                             <rect key="frame" x="468.5" y="12" width="41.5" height="19.5"/>
